# ouracle

./: .gitignore  .gitmodules  .tool-versions  .vercelignore  AGENTS.md  CLAUDE.md  Justfile  README.md  SOURCE_OF_TRUTH.md  hermes_conversation_20260317_210409.json  package-lock.json  package.json  railway.toml  test_firecrawl.js  vite.config.js
.claude/: CLAUDE.md  settings.local.json
.clinerules/: communication-style.md
.github/workflows/: debug-build-failure.yml  release-clea.yml
.hermes/plans/: 20260318_083538-octave-data-completion.md
api/: .gitignore  auth-config.js  auth.js  clea-prompt.js  db.js  decks.js  engine.js  fish-tts.js  index.js  infer.js  llm-client.js  nixpacks.toml  octave-schema.js  package-lock.json  package.json  railway.toml  semantic-embeddings.js  suno.js  test.js  tides.json
api/.well-known/: openapi.json
api/data/: iching-octave-map.json  octave-schema.json  tarot-octave-map.json
api/migrations/: 001_init.sql  002_add_conversation.sql  003_add_covenant_columns.sql  004_add_seeker_name.sql  005_add_seeker_password.sql  006_add_handle.sql  007_totem_and_auth_link.sql  008_guest_sessions.sql  009_device_auth.sql
api/scripts/: build_oracle_mappings.mjs  download-ambient.js  eval-inference.js  false-positive-test.js  octave-narrative-test.js  refresh-tide.js  sync-decks.js  sync-rites.js  test-clea.js  update-octave-frequencies.js
apps/clea-tui/: Cargo.toml  README.md
apps/clea-tui/src/: main.rs
apps/clea-tui/src/reception/: http.rs  tui.rs
apps/clea-web/public/: install.sh
apps/ios/: .gitignore  AGENTS.md  deploy.sh
apps/ios/.claude/: CLAUDE.md  settings.local.json
apps/ios/ouracle/: Config.swift  ContentView.swift  LaunchScreen.storyboard  PrivacyInfo.xcprivacy  ouracle-dev.entitlements  ouracle.entitlements  ouracleApp.swift
apps/ios/ouracle.xcodeproj/: SWIFT_TESTING_REFERENCE.md  project.pbxproj
apps/ios/ouracleTests/: TestsAgentTools.swift  TestsBLEHandshakeProtocolTests.swift  TestsChatMessageTests.swift  TestsDeletePhotoServiceTests.swift  TestsDeleteSouvenirTests.swift  TestsDetentCalculatorTests.swift  TestsDeviceAuthServiceTests.swift  TestsEntityDefaultsTests.swift  TestsFlareManagerTests.swift  TestsFrecencyServiceTests.swift  TestsSemanticColors.swift  (+15 more)
apps/ripltui/: Cargo.toml
apps/tui/: Cargo.toml  README.md
apps/tui/.claude/: CLAUDE.md
apps/tui/assets/: ambient-player.js  ambient-runner.js
apps/tui/ouracle-tui/: Cargo.toml
apps/tui/src/: api.rs  app.rs  aura.rs  main.rs  provider.rs  theme.rs  toroid.rs  totem.rs  ui.rs
apps/tui/src/reception/: http.rs  tui.rs
apps/web/: .env.example  .gitignore  AGENT.md  PWA-IMPLEMENTATION.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.setup.ts
assets/: ouracle-map.HEIC
data/: README.md  changes_lookup.json  hypotheticals.md  iChing_Legge.json  neutral-texts.txt  octave-mapping-enhanced.json  octave-mapping-final.json  octave-steps-truth.json  octave-steps.json  octave.json  octave_changes.json  polyvagal_4f.md  polyvagal_script_quotes.md
data/baselines/: 2026-03-12.json
docs/: aura-prototype.md  chef-feedback-9-mar-26.md  circumplex-emo-detector.md  clea.md  diy.md  emo-detector.md  meat-api-spec.md  octave-ambiance-reference.md  ouracle-map-pathways.md  polyvagal-theory.md  progress.md  ritual-philosophy.md  roadmap.md  tech-spec.md  temple-plan-2026-03-14.md  todo.md  ux-spec.md
docs/research/: delphi.md  tarot.md
docs/specs/: octave-steps-template.md  ouracle-map-pathways.md  rite-deck-pairing.md
docs/tracking/: progress.md  todo.md
research/: iching.md  tarot.md
research/ExportBlock-7df11376-0ef4-4fdb-a8eb-36ad989d4ffb-Part-1/: Break 4 5 241d833af1e24ad6bf88565ff731c374.md  Crisis 7 8 6484f8fe68be44519ec09add634e6006.md  Octave Step ddc4376e3ec94532b271447a64d91c0a.md  Step 1 ed190360d0084dcd8f333198a198c41d.md  Step 2 41950383183249debe77926aa251200e.md  Step 3 d5f972db63aa465d99844dbe04bfc2a8.md  Step 4 91828741a5bd427abd83dd79ab59de30.md  Step 5 ad67951735a34009b12e2edf3cd65a32.md  Step 6 75b794532f444365bc14e6e551a547ce.md  Step 7 27d1695c3849469986817447da4a0027.md  Step 8 0 93e88e93f73e47a7ae8dbed948c250ee.md  The Octave of Evolution 2c5f600c4dd44cfd87f03cac143d9139.csv  The Octave of Evolution 2c5f600c4dd44cfd87f03cac143d9139_all.csv
scripts/: affect-demo.js  build-octave-mapping.js  build_octave_schema.mjs  build_oracle_mappings.mjs  bump_api.sh  bump_tui.sh  cron-generate-testdata.js  extract-octave-data.js  extract-octave-full.js  fetch-remaining-titles.js  generate-enhanced-mapping.js  generate-pwa-icons.js  import-octave-to-neon.js  init-rites.sh  normalize-truth.js  resolve-octave-relations.js  tag_phase.sh  verify-octave-import.js
skills/: README.md  neon.md
skills/commits/: SKILL.md
sql/: README_NEON_IMPORT.md  fix-ordering.js  list-ordered.js  run-fix-ordering.js
src/: app.css  service-worker-registration.js  service-worker.js
src/routes/: +layout.svelte
static/: manifest.json
(+244 files in other folders)
