[package]
name = "clea-tui"
version = "0.2.0"
edition = "2024"
description = "Clea — a terminal oracle powered by Ouracle. macOS only."

[[bin]]
name = "clea"
path = "src/main.rs"

[dependencies]
ripl = { path = "../../../ripl" }
color-eyre = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = "0.26"
crossterm = "0.28"
