[package]
name = "clea-tui"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
description = "Clea — Chief Priestess of Ouracle. CLI/TUI for macOS."
license = "MIT"
repository = "https://github.com/krry/ouracle"
homepage = "https://ouracle.kerry.ink/clea"
readme = "README.md"
keywords = ["tui", "ai", "chat", "terminal", "ratatui"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "clea"
path = "src/main.rs"

[dependencies]
ripl = { package = "ripl-tui", version = "0.3" }
color-eyre = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = "0.26"
crossterm = "0.28"
