[package]
name = "tui"
version = "0.1.1"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.8.5"
ratatui = "0.30.0"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
textwrap = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.50.0"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
sha2 = "0.10.8"
libc = "0.2.183"
