[package]
name = "clea-tui"
version = "0.2.3"
edition = "2024"
rust-version = "1.94"
description = "Clea — Chief Priestess of Ouracle available via CLI/TUI in your UNIX shell"
license = "MIT"
repository = "https://github.com/krry/ouracle"
homepage = "https://ouracle.kerry.ink/clea"
readme = "README.md"
keywords = ["tui", "ai", "chat", "terminal", "ratatui"]
categories = ["command-line-interface", "command-line-utilities"]

[package.metadata]
icons = ["assets/icon-256.png"]

[[bin]]
name = "clea"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.26"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
toml = "0.8"
ripl = { package = "ripl-tui", path = "../../../ripl" }

[dev-dependencies]
tempfile = "3.18"
